syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// WarriorTalents message.
message WarriorTalents {
    // Arms
    int32 war_academy = 1;
    int32 field_dressing = 2;
    int32 blitz = 3;
    int32 tactical_mastery = 4;
    int32 second_wind = 5;
    int32 deep_wounds = 6;
    int32 drums_of_war = 7;
    int32 taste_for_blood = 8;
    bool sweeping_strikes = 9;
    int32 impale = 10;
    int32 improved_hamstring = 11;
    int32 improved_slam = 12;
    bool deadly_calm = 13;
    int32 blood_frenzy = 14;
    int32 lambs_to_the_slaughter = 15;
    bool juggernaut = 16;
    int32 sudden_death = 17;
    int32 wrecking_crew = 18;
    bool throwdown = 19;
    bool bladestorm = 20;
    // Fury
    int32 blood_craze = 21;
    int32 battle_trance = 22;
    int32 cruelty = 23;
    int32 executioner = 24;
    int32 booming_voice = 25;
    int32 rude_interruption = 26;
    bool piercing_howl = 27;
    int32 flurry = 28;
    bool death_wish = 29;
    int32 enrage = 30;
    int32 die_by_the_sword = 31;
    bool raging_blow = 32;
    bool rampage = 33;
    bool heroic_fury = 34;
    bool furious_attacks = 35;
    int32 meat_cleaver = 36;
    int32 intensify_rage = 37;
    int32 bloodsurge = 38;
    int32 skirmisher = 39;
    bool titans_grip = 40;
    bool single_minded_fury = 41;
    // Protection
    int32 incite = 42;
    int32 toughness = 43;
    int32 blood_and_thunder = 44;
    int32 shield_specialization = 45;
    int32 shield_mastery = 46;
    int32 hold_the_line = 47;
    int32 gag_order = 48;
    bool last_stand = 49;
    bool concussion_blow = 50;
    int32 bastion_of_defense = 51;
    bool warbringer = 52;
    int32 improved_revenge = 53;
    bool devastate = 54;
    int32 impending_victory = 55;
    int32 thunderstruck = 56;
    bool vigilance = 57;
    int32 heavy_repercussions = 58;
    int32 safeguard = 59;
    int32 sword_and_board = 60;
    bool shockwave = 61;
}

enum WarriorPrimeGlyph {
    WarriorPrimeGlyphNone = 0;
    GlyphOfDevastate = 43415;
    GlyphOfBloodthirst = 43416;
    GlyphOfMortalStrike = 43421;
    GlyphOfOverpower = 43422;
    GlyphOfSlam = 43423;
    GlyphOfRevenge = 43424;
    GlyphOfShieldSlam = 43425;
    GlyphOfRagingBlow = 43432;
    GlyphOfBladestorm = 45790;
}

enum WarriorMajorGlyph {
    WarriorMajorGlyphNone = 0;
    GlyphOfLongCharge = 43397;
    GlyphOfThunderClap = 43399;
    GlyphOfRapidCharge = 43413;
    GlyphOfCleaving = 43414;
    GlyphOfPiercingHowl = 43417;
    GlyphOfHeroicThrow = 43418;
    GlyphOfIntervene = 43419;
    GlyphOfSunderArmor = 43427;
    GlyphOfSweepingStrikes = 43428;
    GlyphOfResonatingPower = 43430;
    GlyphOfVictoryRush = 43431;
    GlyphOfShockwave = 45792;
    GlyphOfSpellReflection = 45795;
    GlyphOfShieldWall = 45797;
    GlyphOfColossusSmash = 63481;
    GlyphOfIntercept = 67482;
    GlyphOfDeathWish = 67483;
}

enum WarriorMinorGlyph {
    WarriorMinorGlyphNone = 0;
    GlyphOfBattle = 43395;
    GlyphOfBerserkerRage = 43396;
    GlyphOfDemoralizingShout = 43398;
    GlyphOfEnduringVictory = 43400;
    GlyphOfBloodyHealing = 43412;
    GlyphOfFuriousSundering = 45793;
    GlyphOfIntimidatingShout = 45794;
    GlyphOfCommand = 49084;
}

// END GENERATED

message WarriorOptions {
	double starting_rage = 1;
}

message ArmsWarrior {
	message Rotation {}

	message Options {
		WarriorOptions class_options = 1;
		bool stance_snapshot = 2;
	}
	Options options = 1;
}

message FuryWarrior {
	message Rotation {}

	message Options {
		WarriorOptions class_options = 1;
		bool stance_snapshot = 2;
		WarriorSyncType sync_type = 3;
		int32 prepull_mastery = 4 [deprecated=true]; // Use Item Swap sets instead
		bool use_item_swap_bonus_stats = 5;
	}
	Options options = 1;
}

enum WarriorSyncType {
	WarriorNoSync = 0;
	WarriorSyncMainhandOffhandSwings = 1;
  }

message ProtectionWarrior {
	message Rotation {}

	message Options {
		WarriorOptions class_options = 1;
	}
	Options options = 1;
}
